# SSDyP-GameOfLife

./: .gitignore  CMakeLists.txt  Makefile  README.md  cell.c  main.c  main_distributed.c  main_hybrid.c  main_seq_openmp.c  main_sequential.c
src/: cell.c  matrix.c  matrix_sequential.c  statistics.c
src/base_utils/: cell.c  cell.h  gui.c  gui.h  matrix_utils.c  matrix_utils.h  print_matrix_utils.c  print_matrix_utils.h  statistics.c  statistics.h
src/distributed_mpi/: main_distributed.c  matrix_MPI.c  matrix_MPI.h
src/headers/: all_includes.h  cell.h  matrix.h  matrix_sequential.h  matrixs_data.h  statistics.h
src/headers/matrix_operations/: matrix_MPI.h  matrix_MPI_OpenMP.h  matrix_openMP.h  matrix_sequential.h  print_matrix.h
src/hybrid_openmp_mpi/: main_hybrid.c  matrix_MPI_OpenMP.c  matrix_MPI_OpenMP.h
src/matrix_operations/: matrix_MPI.c  matrix_MPI_OpenMP.c  matrix_openMP.c  matrix_sequential.c  print_matrix.c
src/openmp/: main_openmp.c  matrix_openMP.c  matrix_openMP.h
src/sequential/: main_sequential.c  matrix_sequential.c  matrix_sequential.h
